src/LexerAndParser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from Parser.y
-----------------------------------------------------------------------------


terminal pointer is unused
terminal '&' is unused
terminal duets is unused
terminal left is unused
terminal right is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> START                              (0)
	START -> IMPORTS OUTSIDEFUNCTION                   (1)
	IMPORTS -> IMPORT newline IMPORTS                  (2)
	IMPORTS ->                                         (3)
	IMPORT -> aroundtheworld IDS                       (4)
	IDS -> id ',' IDS                                  (5)
	IDS -> id                                          (6)
	OUTSIDEFUNCTION -> FUNCTIONINIC newline OUTSIDEFUNCTION   (7)
	OUTSIDEFUNCTION -> DECLARATION newline OUTSIDEFUNCTION   (8)
	OUTSIDEFUNCTION -> DEFINESTRUCT newline OUTSIDEFUNCTION   (9)
	OUTSIDEFUNCTION ->                                 (10)
	FUNCTIONINIC -> dafunk id '(' LPARAMETERSFUNC ')' ':' RETURNTYPE BLOCK   (11)
	RETURNTYPE -> intothevoid                          (12)
	RETURNTYPE -> TYPE                                 (13)
	LPARAMETERSFUNC ->                                 (14)
	LPARAMETERSFUNC -> NONEMPTYLPARAMETERSFUNC         (15)
	NONEMPTYLPARAMETERSFUNC -> FUNCTIONPARAMETER ',' NONEMPTYLPARAMETERSFUNC   (16)
	NONEMPTYLPARAMETERSFUNC -> FUNCTIONPARAMETER       (17)
	FUNCTIONPARAMETER -> TYPE id                       (18)
	BLOCK -> MAYBELINE youbegin INSIDEFUNCTION MAYBELINE whereiend   (19)
	INSIDEFUNCTION -> INSIDEFUNCTION newline INSTRUCTION   (20)
	INSIDEFUNCTION -> INSTRUCTION                      (21)
	INSIDEFUNCTION ->                                  (22)
	DECLARATION -> TYPE DECLARATIONTYPE                (23)
	TYPE -> TYPE2                                      (24)
	TYPE -> TYPE2 '^'                                  (25)
	TYPE2 -> int                                       (26)
	TYPE2 -> float                                     (27)
	TYPE2 -> boolean                                   (28)
	TYPE2 -> char                                      (29)
	TYPE2 -> string                                    (30)
	TYPE2 -> id                                        (31)
	DECLARATIONTYPE -> ID '=' EXPRESSION               (32)
	DECLARATIONTYPE -> ID '=' EXPRESSION ',' DECLARATIONTYPE   (33)
	DECLARATIONTYPE -> ID                              (34)
	DECLARATIONTYPE -> ID ',' DECLARATIONTYPE          (35)
	ID -> id                                           (36)
	ID -> id '[' EXPRESSION ']'                        (37)
	INSTRUCTION -> go '(' PRINT ')'                    (38)
	INSTRUCTION -> goslowly '(' PRINT ')'              (39)
	INSTRUCTION -> gomental '(' PRINT ')'              (40)
	INSTRUCTION -> readmymind '(' IDS ')'              (41)
	INSTRUCTION -> amnesiac '(' id ')'                 (42)
	INSTRUCTION -> if EXPRESSION BLOCK IFELSE          (43)
	INSTRUCTION -> cantstop EXPRESSION BLOCK           (44)
	INSTRUCTION -> onemoretime TYPE id '=' EXPRESSION ';' EXPRESSION ';' EXPRESSION BLOCK   (45)
	INSTRUCTION -> getback EXPRESSION                  (46)
	INSTRUCTION -> breakthru                           (47)
	INSTRUCTION -> exitmusic                           (48)
	INSTRUCTION -> DECLARATION                         (49)
	INSTRUCTION -> EXPRESSION                          (50)
	IFELSE -> ifyouhavetoask EXPRESSION BLOCK newline IFELSE   (51)
	IFELSE -> otherside BLOCK newline                  (52)
	IFELSE ->                                          (53)
	PRINT -> string ',' PRINT                          (54)
	PRINT -> id ',' PRINT                              (55)
	PRINT -> string                                    (56)
	PRINT -> id                                        (57)
	DEFINESTRUCT -> band id id '{' LDECLARATIONS '}'   (58)
	DEFINESTRUCT -> union id id '{' LDECLARATIONS '}'   (59)
	LDECLARATIONS -> LDECLARATIONS newline DECLARATION   (60)
	LDECLARATIONS -> DECLARATION                       (61)
	EXPRESSION -> id                                   (62)
	EXPRESSION -> n                                    (63)
	EXPRESSION -> string                               (64)
	EXPRESSION -> ok                                   (65)
	EXPRESSION -> notok                                (66)
	EXPRESSION -> '(' EXPRESSION ')'                   (67)
	EXPRESSION -> EXPRESSION '<' EXPRESSION            (68)
	EXPRESSION -> EXPRESSION '>' EXPRESSION            (69)
	EXPRESSION -> EXPRESSION '<=' EXPRESSION           (70)
	EXPRESSION -> EXPRESSION '>=' EXPRESSION           (71)
	EXPRESSION -> EXPRESSION '==' EXPRESSION           (72)
	EXPRESSION -> EXPRESSION '!=' EXPRESSION           (73)
	EXPRESSION -> not EXPRESSION                       (74)
	EXPRESSION -> EXPRESSION and EXPRESSION            (75)
	EXPRESSION -> EXPRESSION or EXPRESSION             (76)
	EXPRESSION -> '-' EXPRESSION                       (77)
	EXPRESSION -> EXPRESSION '+' EXPRESSION            (78)
	EXPRESSION -> EXPRESSION '-' EXPRESSION            (79)
	EXPRESSION -> EXPRESSION '*' EXPRESSION            (80)
	EXPRESSION -> EXPRESSION '/' EXPRESSION            (81)
	EXPRESSION -> EXPRESSION '%' EXPRESSION            (82)
	EXPRESSION -> EXPRESSION mod EXPRESSION            (83)
	EXPRESSION -> EXPRESSION div EXPRESSION            (84)
	EXPRESSION -> ARRAYPOSITION                        (85)
	EXPRESSION -> EXPRESSIONSTRUCT                     (86)
	EXPRESSION -> FUNCTIONCALL                         (87)
	EXPRESSION -> newlife '(' EXPRESSION ')'           (88)
	EXPRESSION -> '^' id                               (89)
	EXPRESSION -> id '=' EXPRESSION                    (90)
	ARRAYPOSITION -> id '[' n ']'                      (91)
	ARRAYPOSITION -> id '[' id ']'                     (92)
	EXPRESSIONSTRUCT -> id '.' id                      (93)
	FUNCTIONCALL -> id '(' IDS ')'                     (94)
	MAYBELINE ->                                       (95)
	MAYBELINE -> newline                               (96)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	youbegin       { YouBeginTkn _ }
	whereiend      { WhereIEndTkn _ }
	if             { IfTkn $$ }
	ifyouhavetoask { IfYouHaveToAskTkn $$ }
	otherside      { OthersideTkn _ }
	cantstop       { CantStopTkn $$ }
	breakthru      { BreakthruTkn _ }
	onemoretime    { OneMoreTimeTkn $$ }
	';'            { SemiColonTkn _ }
	readmymind     { ReadMyMindTkn $$ }
	go             { GoTkn $$ }
	gomental       { GoMentalTkn $$ }
	goslowly       { GoSlowlyTkn $$ }
	dafunk         { DaFunkTkn $$ }
	':'            { ColonTkn _ }
	getback        { GetBackTkn _ }
	intothevoid    { IntoTheVoidTkn _ }
	newlife        { NewLifeTkn _ }
	amnesiac       { AmnesiacTkn _ }
	exitmusic      { ExitMusicTkn _ }
	aroundtheworld { AroundTheWorldTkn _ }
	int            { IntTkn _ }
	pointer        { PointerTkn _ }
	float          { FloatTkn _ }
	char           { CharTkn _ }
	boolean        { BooleanTkn _ }
	ok             { OkTkn _ }
	notok          { NotOkTkn _ }
	'{'            { OpenBraceTkn _ }
	'}'            { CloseBraceTkn _ }
	'['            { ArrayStartTkn _ }
	']'            { ArrayEndTkn _ }
	band           { BandTkn _ }
	union          { UnionTkn _ }
	'.'            {  }
	'&'            { PointerTkn }
	'^'            {  }
	duets          { DuetsTkn _ }
	left           { LeftTkn _ }
	right          { RightTkn _ }
	mod            { ModTkn _ }
	div            { DivTkn _ }
	not            { NotTkn _ }
	and            { AndTkn _ }
	or             { OrTkn _ }
	','            { CommaTkn _ }
	'('            { ParenOpenTkn _ }
	')'            { ParenCloseTkn _ }
	'+'            { PlusTkn _ }
	'=='           { EqualTkn _ }
	'*'            { ProductTkn _ }
	'-'            { MinusTkn _ }
	'%'            { RestTkn _ }
	'/'            { DivExacTkn _ }
	'!='           { DifTkn _ }
	'>='           { GreaterEqualTkn _ }
	'<='           { LessEqualTkn _ }
	'>'            { GreaterTkn _ }
	'<'            { LessTkn _ }
	'='            { AssignTkn _ }
	id             { IdTkn _ _ }
	n              { NumLiteralTkn _ _ }
	newline        { NewLineTkn _ }
	string         { StringTkn _ _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	START           rule  1
	IMPORTS         rules 2, 3
	IMPORT          rule  4
	IDS             rules 5, 6
	OUTSIDEFUNCTION rules 7, 8, 9, 10
	FUNCTIONINIC    rule  11
	RETURNTYPE      rules 12, 13
	LPARAMETERSFUNC rules 14, 15
	NONEMPTYLPARAMETERSFUNC rules 16, 17
	FUNCTIONPARAMETER rule  18
	BLOCK           rule  19
	INSIDEFUNCTION  rules 20, 21, 22
	DECLARATION     rule  23
	TYPE            rules 24, 25
	TYPE2           rules 26, 27, 28, 29, 30, 31
	DECLARATIONTYPE rules 32, 33, 34, 35
	ID              rules 36, 37
	INSTRUCTION     rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	IFELSE          rules 51, 52, 53
	PRINT           rules 54, 55, 56, 57
	DEFINESTRUCT    rules 58, 59
	LDECLARATIONS   rules 60, 61
	EXPRESSION      rules 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90
	ARRAYPOSITION   rules 91, 92
	EXPRESSIONSTRUCT rule  93
	FUNCTIONCALL    rule  94
	MAYBELINE       rules 95, 96

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	dafunk         reduce using rule 3
	aroundtheworld shift, and enter state 4
	int            reduce using rule 3
	float          reduce using rule 3
	char           reduce using rule 3
	boolean        reduce using rule 3
	band           reduce using rule 3
	union          reduce using rule 3
	id             reduce using rule 3
	string         reduce using rule 3
	%eof           reduce using rule 3

	START          goto state 5
	IMPORTS        goto state 2
	IMPORT         goto state 3

State 1


	aroundtheworld shift, and enter state 4

	IMPORTS        goto state 2
	IMPORT         goto state 3

State 2

	START -> IMPORTS . OUTSIDEFUNCTION                  (rule 1)

	dafunk         shift, and enter state 15
	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	band           shift, and enter state 20
	union          shift, and enter state 21
	id             shift, and enter state 22
	string         shift, and enter state 23
	%eof           reduce using rule 10

	OUTSIDEFUNCTIONgoto state 9
	FUNCTIONINIC   goto state 10
	DECLARATION    goto state 11
	TYPE           goto state 12
	TYPE2          goto state 13
	DEFINESTRUCT   goto state 14

State 3

	IMPORTS -> IMPORT . newline IMPORTS                 (rule 2)

	newline        shift, and enter state 8


State 4

	IMPORT -> aroundtheworld . IDS                      (rule 4)

	id             shift, and enter state 7

	IDS            goto state 6

State 5

	%start_parse -> START .                             (rule 0)

	%eof           accept


State 6

	IMPORT -> aroundtheworld IDS .                      (rule 4)

	newline        reduce using rule 4


State 7

	IDS -> id . ',' IDS                                 (rule 5)
	IDS -> id .                                         (rule 6)

	','            shift, and enter state 35
	')'            reduce using rule 6
	newline        reduce using rule 6


State 8

	IMPORTS -> IMPORT newline . IMPORTS                 (rule 2)

	dafunk         reduce using rule 3
	aroundtheworld shift, and enter state 4
	int            reduce using rule 3
	float          reduce using rule 3
	char           reduce using rule 3
	boolean        reduce using rule 3
	band           reduce using rule 3
	union          reduce using rule 3
	id             reduce using rule 3
	string         reduce using rule 3
	%eof           reduce using rule 3

	IMPORTS        goto state 34
	IMPORT         goto state 3

State 9

	START -> IMPORTS OUTSIDEFUNCTION .                  (rule 1)

	%eof           reduce using rule 1


State 10

	OUTSIDEFUNCTION -> FUNCTIONINIC . newline OUTSIDEFUNCTION    (rule 7)

	newline        shift, and enter state 33


State 11

	OUTSIDEFUNCTION -> DECLARATION . newline OUTSIDEFUNCTION    (rule 8)

	newline        shift, and enter state 32


State 12

	DECLARATION -> TYPE . DECLARATIONTYPE               (rule 23)

	id             shift, and enter state 31

	DECLARATIONTYPEgoto state 29
	ID             goto state 30

State 13

	TYPE -> TYPE2 .                                     (rule 24)
	TYPE -> TYPE2 . '^'                                 (rule 25)

	youbegin       reduce using rule 24
	'^'            shift, and enter state 28
	id             reduce using rule 24
	newline        reduce using rule 24


State 14

	OUTSIDEFUNCTION -> DEFINESTRUCT . newline OUTSIDEFUNCTION    (rule 9)

	newline        shift, and enter state 27


State 15

	FUNCTIONINIC -> dafunk . id '(' LPARAMETERSFUNC ')' ':' RETURNTYPE BLOCK    (rule 11)

	id             shift, and enter state 26


State 16

	TYPE2 -> int .                                      (rule 26)

	youbegin       reduce using rule 26
	'^'            reduce using rule 26
	id             reduce using rule 26
	newline        reduce using rule 26


State 17

	TYPE2 -> float .                                    (rule 27)

	youbegin       reduce using rule 27
	'^'            reduce using rule 27
	id             reduce using rule 27
	newline        reduce using rule 27


State 18

	TYPE2 -> char .                                     (rule 29)

	youbegin       reduce using rule 29
	'^'            reduce using rule 29
	id             reduce using rule 29
	newline        reduce using rule 29


State 19

	TYPE2 -> boolean .                                  (rule 28)

	youbegin       reduce using rule 28
	'^'            reduce using rule 28
	id             reduce using rule 28
	newline        reduce using rule 28


State 20

	DEFINESTRUCT -> band . id id '{' LDECLARATIONS '}'    (rule 58)

	id             shift, and enter state 25


State 21

	DEFINESTRUCT -> union . id id '{' LDECLARATIONS '}'    (rule 59)

	id             shift, and enter state 24


State 22

	TYPE2 -> id .                                       (rule 31)

	youbegin       reduce using rule 31
	'^'            reduce using rule 31
	id             reduce using rule 31
	newline        reduce using rule 31


State 23

	TYPE2 -> string .                                   (rule 30)

	youbegin       reduce using rule 30
	'^'            reduce using rule 30
	id             reduce using rule 30
	newline        reduce using rule 30


State 24

	DEFINESTRUCT -> union id . id '{' LDECLARATIONS '}'    (rule 59)

	id             shift, and enter state 45


State 25

	DEFINESTRUCT -> band id . id '{' LDECLARATIONS '}'    (rule 58)

	id             shift, and enter state 44


State 26

	FUNCTIONINIC -> dafunk id . '(' LPARAMETERSFUNC ')' ':' RETURNTYPE BLOCK    (rule 11)

	'('            shift, and enter state 43


State 27

	OUTSIDEFUNCTION -> DEFINESTRUCT newline . OUTSIDEFUNCTION    (rule 9)

	dafunk         shift, and enter state 15
	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	band           shift, and enter state 20
	union          shift, and enter state 21
	id             shift, and enter state 22
	string         shift, and enter state 23
	%eof           reduce using rule 10

	OUTSIDEFUNCTIONgoto state 42
	FUNCTIONINIC   goto state 10
	DECLARATION    goto state 11
	TYPE           goto state 12
	TYPE2          goto state 13
	DEFINESTRUCT   goto state 14

State 28

	TYPE -> TYPE2 '^' .                                 (rule 25)

	youbegin       reduce using rule 25
	id             reduce using rule 25
	newline        reduce using rule 25


State 29

	DECLARATION -> TYPE DECLARATIONTYPE .               (rule 23)

	whereiend      reduce using rule 23
	'}'            reduce using rule 23
	newline        reduce using rule 23


State 30

	DECLARATIONTYPE -> ID . '=' EXPRESSION              (rule 32)
	DECLARATIONTYPE -> ID . '=' EXPRESSION ',' DECLARATIONTYPE    (rule 33)
	DECLARATIONTYPE -> ID .                             (rule 34)
	DECLARATIONTYPE -> ID . ',' DECLARATIONTYPE         (rule 35)

	whereiend      reduce using rule 34
	'}'            reduce using rule 34
	','            shift, and enter state 40
	'='            shift, and enter state 41
	newline        reduce using rule 34


State 31

	ID -> id .                                          (rule 36)
	ID -> id . '[' EXPRESSION ']'                       (rule 37)

	whereiend      reduce using rule 36
	'}'            reduce using rule 36
	'['            shift, and enter state 39
	','            reduce using rule 36
	'='            reduce using rule 36
	newline        reduce using rule 36


State 32

	OUTSIDEFUNCTION -> DECLARATION newline . OUTSIDEFUNCTION    (rule 8)

	dafunk         shift, and enter state 15
	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	band           shift, and enter state 20
	union          shift, and enter state 21
	id             shift, and enter state 22
	string         shift, and enter state 23
	%eof           reduce using rule 10

	OUTSIDEFUNCTIONgoto state 38
	FUNCTIONINIC   goto state 10
	DECLARATION    goto state 11
	TYPE           goto state 12
	TYPE2          goto state 13
	DEFINESTRUCT   goto state 14

State 33

	OUTSIDEFUNCTION -> FUNCTIONINIC newline . OUTSIDEFUNCTION    (rule 7)

	dafunk         shift, and enter state 15
	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	band           shift, and enter state 20
	union          shift, and enter state 21
	id             shift, and enter state 22
	string         shift, and enter state 23
	%eof           reduce using rule 10

	OUTSIDEFUNCTIONgoto state 37
	FUNCTIONINIC   goto state 10
	DECLARATION    goto state 11
	TYPE           goto state 12
	TYPE2          goto state 13
	DEFINESTRUCT   goto state 14

State 34

	IMPORTS -> IMPORT newline IMPORTS .                 (rule 2)

	dafunk         reduce using rule 2
	int            reduce using rule 2
	float          reduce using rule 2
	char           reduce using rule 2
	boolean        reduce using rule 2
	band           reduce using rule 2
	union          reduce using rule 2
	id             reduce using rule 2
	string         reduce using rule 2
	%eof           reduce using rule 2


State 35

	IDS -> id ',' . IDS                                 (rule 5)

	id             shift, and enter state 7

	IDS            goto state 36

State 36

	IDS -> id ',' IDS .                                 (rule 5)

	')'            reduce using rule 5
	newline        reduce using rule 5


State 37

	OUTSIDEFUNCTION -> FUNCTIONINIC newline OUTSIDEFUNCTION .    (rule 7)

	%eof           reduce using rule 7


State 38

	OUTSIDEFUNCTION -> DECLARATION newline OUTSIDEFUNCTION .    (rule 8)

	%eof           reduce using rule 8


State 39

	ID -> id '[' . EXPRESSION ']'                       (rule 37)

	newlife        shift, and enter state 56
	ok             shift, and enter state 57
	notok          shift, and enter state 58
	'^'            shift, and enter state 59
	not            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	id             shift, and enter state 63
	n              shift, and enter state 64
	string         shift, and enter state 65

	EXPRESSION     goto state 67
	ARRAYPOSITION  goto state 53
	EXPRESSIONSTRUCTgoto state 54
	FUNCTIONCALL   goto state 55

State 40

	DECLARATIONTYPE -> ID ',' . DECLARATIONTYPE         (rule 35)

	id             shift, and enter state 31

	DECLARATIONTYPEgoto state 66
	ID             goto state 30

State 41

	DECLARATIONTYPE -> ID '=' . EXPRESSION              (rule 32)
	DECLARATIONTYPE -> ID '=' . EXPRESSION ',' DECLARATIONTYPE    (rule 33)

	newlife        shift, and enter state 56
	ok             shift, and enter state 57
	notok          shift, and enter state 58
	'^'            shift, and enter state 59
	not            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	id             shift, and enter state 63
	n              shift, and enter state 64
	string         shift, and enter state 65

	EXPRESSION     goto state 52
	ARRAYPOSITION  goto state 53
	EXPRESSIONSTRUCTgoto state 54
	FUNCTIONCALL   goto state 55

State 42

	OUTSIDEFUNCTION -> DEFINESTRUCT newline OUTSIDEFUNCTION .    (rule 9)

	%eof           reduce using rule 9


State 43

	FUNCTIONINIC -> dafunk id '(' . LPARAMETERSFUNC ')' ':' RETURNTYPE BLOCK    (rule 11)

	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	')'            reduce using rule 14
	id             shift, and enter state 22
	string         shift, and enter state 23

	LPARAMETERSFUNCgoto state 48
	NONEMPTYLPARAMETERSFUNCgoto state 49
	FUNCTIONPARAMETERgoto state 50
	TYPE           goto state 51
	TYPE2          goto state 13

State 44

	DEFINESTRUCT -> band id id . '{' LDECLARATIONS '}'    (rule 58)

	'{'            shift, and enter state 47


State 45

	DEFINESTRUCT -> union id id . '{' LDECLARATIONS '}'    (rule 59)

	'{'            shift, and enter state 46


State 46

	DEFINESTRUCT -> union id id '{' . LDECLARATIONS '}'    (rule 59)

	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	id             shift, and enter state 22
	string         shift, and enter state 23

	DECLARATION    goto state 97
	TYPE           goto state 12
	TYPE2          goto state 13
	LDECLARATIONS  goto state 99

State 47

	DEFINESTRUCT -> band id id '{' . LDECLARATIONS '}'    (rule 58)

	int            shift, and enter state 16
	float          shift, and enter state 17
	char           shift, and enter state 18
	boolean        shift, and enter state 19
	id             shift, and enter state 22
	string         shift, and enter state 23

	DECLARATION    goto state 97
	TYPE           goto state 12
	TYPE2          goto state 13
	LDECLARATIONS  goto state 98

State 48

	FUNCTIONINIC -> dafunk id '(' LPARAMETERSFUNC . ')' ':' RETURNTYPE BLOCK    (rule 11)

	')'            shift, and enter state 96


State 49

	LPARAMETERSFUNC -> NONEMPTYLPARAMETERSFUNC .        (rule 15)

	')'            reduce using rule 15


State 50

	NONEMPTYLPARAMETERSFUNC -> FUNCTIONPARAMETER . ',' NONEMPTYLPARAMETERSFUNC    (rule 16)
	NONEMPTYLPARAMETERSFUNC -> FUNCTIONPARAMETER .      (rule 17)

	','            shift, and enter state 95
	')'            reduce using rule 17


State 51

	FUNCTIONPARAMETER -> TYPE . id                      (rule 18)

	id             shift, and enter state 94


State 52

	DECLARATIONTYPE -> ID '=' EXPRESSION .              (rule 32)
	DECLARATIONTYPE -> ID '=' EXPRESSION . ',' DECLARATIONTYPE    (rule 33)
	EXPRESSION -> EXPRESSION . '<' EXPRESSION           (rule 68)
	EXPRESSION -> EXPRESSION . '>' EXPRESSION           (rule 69)
	EXPRESSION -> EXPRESSION . '<=' EXPRESSION          (rule 70)
	EXPRESSION -> EXPRESSION . '>=' EXPRESSION          (rule 71)
	EXPRESSION -> EXPRESSION . '==' EXPRESSION          (rule 72)
	EXPRESSION -> EXPRESSION . '!=' EXPRESSION          (rule 73)
	EXPRESSION -> EXPRESSION . and EXPRESSION           (rule 75)
	EXPRESSION -> EXPRESSION . or EXPRESSION            (rule 76)
	EXPRESSION -> EXPRESSION . '+' EXPRESSION           (rule 78)
	EXPRESSION -> EXPRESSION . '-' EXPRESSION           (rule 79)
	EXPRESSION -> EXPRESSION . '*' EXPRESSION           (rule 80)
	EXPRESSION -> EXPRESSION . '/' EXPRESSION           (rule 81)
	EXPRESSION -> EXPRESSION . '%' EXPRESSION           (rule 82)
	EXPRESSION -> EXPRESSION . mod EXPRESSION           (rule 83)
	EXPRESSION -> EXPRESSION . div EXPRESSION           (rule 84)

	whereiend      reduce using rule 32
	'}'            reduce using rule 32
	mod            shift, and enter state 69
	div            shift, and enter state 70
	and            shift, and enter state 71
	or             shift, and enter state 72
	','            shift, and enter state 93
	'+'            shift, and enter state 73
	'=='           shift, and enter state 74
	'*'            shift, and enter state 75
	'-'            shift, and enter state 76
	'%'            shift, and enter state 77
	'/'            shift, and enter state 78
	'!='           shift, and enter state 79
	'>='           shift, and enter state 80
	'<='           shift, and enter state 81
	'>'            shift, and enter state 82
	'<'            shift, and enter state 83
	newline        reduce using rule 32


State 53

	EXPRESSION -> ARRAYPOSITION .                       (rule 85)

	youbegin       reduce using rule 85
	whereiend      reduce using rule 85
	';'            reduce using rule 85
	'}'            reduce using rule 85
	']'            reduce using rule 85
	mod            reduce using rule 85
	div            reduce using rule 85
	and            reduce using rule 85
	or             reduce using rule 85
	','            reduce using rule 85
	')'            reduce using rule 85
	'+'            reduce using rule 85
	'=='           reduce using rule 85
	'*'            reduce using rule 85
	'-'            reduce using rule 85
	'%'            reduce using rule 85
	'/'            reduce using rule 85
	'!='           reduce using rule 85
	'>='           reduce using rule 85
	'<='           reduce using rule 85
	'>'            reduce using rule 85
	'<'            reduce using rule 85
	newline        reduce using rule 85


State 54

	EXPRESSION -> EXPRESSIONSTRUCT .                    (rule 86)

	youbegin       reduce using rule 86
	whereiend      reduce using rule 86
	';'            reduce using rule 86
	'}'            reduce using rule 86
	']'            reduce using rule 86
	mod            reduce using rule 86
	div            reduce using rule 86
	and            reduce using rule 86
	or             reduce using rule 86
	','            reduce using rule 86
	')'            reduce using rule 86
	'+'            reduce using rule 86
	'=='           reduce using rule 86
	'*'            reduce using rule 86
	'-'            reduce using rule 86
	'%'            reduce using rule 86
	'/'            reduce using rule 86
	'!='           reduce using rule 86
	'>='           reduce using rule 86
	'<='           reduce using rule 86
	'>'            reduce using rule 86
	'<'            reduce using rule 86
	newline        reduce using rule 86


State 55

	EXPRESSION -> FUNCTIONCALL .                        (rule 87)

	youbegin       reduce using rule 87
	whereiend      reduce using rule 87
	';'            reduce using rule 87
	'}'            reduce using rule 87
	']'            reduce using rule 87
	mod            reduce using rule 87
	div            reduce using rule 87
	and            reduce using rule 87
	or             reduce using rule 87
	','            reduce using rule 87
	')'            reduce using rule 87
	'+'            reduce using rule 87
	'=='           reduce using rule 87
	'*'            reduce using rule 87
	'-'            reduce using rule 87
	'%'            reduce using rule 87
	'/'            reduce using rule 87
	'!='           reduce using rule 87
	'>='           reduce using rule 87
	'<='           reduce using rule 87
	'>'            reduce using rule 87
	'<'            reduce using rule 87
	newline        reduce using rule 87


State 56

	EXPRESSION -> newlife . '(' EXPRESSION ')'          (rule 88)

	'('            shift, and enter state 92


State 57

	EXPRESSION -> ok .                                  (rule 65)

	youbegin       reduce using rule 65
	whereiend      reduce using rule 65
	';'            reduce using rule 65
	'}'            reduce using rule 65
	']'            reduce using rule 65
	mod            reduce using rule 65
	div            reduce using rule 65
	and            reduce using rule 65
	or             reduce using rule 65
	','            reduce using rule 65
	')'            reduce using rule 65
	'+'            reduce using rule 65
	'=='           reduce using rule 65
	'*'            reduce using rule 65
	'-'            reduce using rule 65
	'%'            reduce using rule 65
	'/'            reduce using rule 65
	'!='           reduce using rule 65
	'>='           reduce using rule 65
	'<='           reduce using rule 65
	'>'            reduce using rule 65
	'<'            reduce using rule 65
	newline        reduce using rule 65


State 58

	EXPRESSION -> notok .                               (rule 66)

	youbegin       reduce using rule 66
	whereiend      reduce using rule 66
	';'            reduce using rule 66
	'}'            reduce using rule 66
	']'            reduce using rule 66
	mod            reduce using rule 66
	div            reduce using rule 66
	and            reduce using rule 66
	or             reduce using rule 66
	','            reduce using rule 66
	')'            reduce using rule 66
	'+'            reduce using rule 66
	'=='           reduce using rule 66
	'*'            reduce using rule 66
	'-'            reduce using rule 66
	'%'            reduce using rule 66
	'/'            reduce using rule 66
	'!='           reduce using rule 66
	'>='           reduce using rule 66
	'<='           reduce using rule 66
	'>'            reduce using rule 66
	'<'            reduce using rule 66
	newline        reduce using rule 66


State 59

	EXPRESSION -> '^' . id                              (rule 89)

	id             shift, and enter state 91


State 60

	EXPRESSION -> not . EXPRESSION                      (rule 74)

	newlife        shift, and enter state 56
	ok             shift, and enter state 57
	notok          shift, and enter state 58
	'^'            shift, and enter state 59
	not            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	id             shift, and enter state 63
	n              shift, and enter state 64
	string         shift, and enter state 65

	EXPRESSION     goto state 90
	ARRAYPOSITION  goto state 53
	EXPRESSIONSTRUCTgoto state 54
	FUNCTIONCALL   goto state 55

State 61

	EXPRESSION -> '(' . EXPRESSION ')'                  (rule 67)

	newlife        shift, and enter state 56
	ok             shift, and enter state 57
	notok          shift, and enter state 58
	'^'            shift, and enter state 59
	not            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	id             shift, and enter state 63
	n              shift, and enter state 64
	string         shift, and enter state 65

	EXPRESSION     goto state 89
	ARRAYPOSITION  goto state 53
	EXPRESSIONSTRUCTgoto state 54
	FUNCTIONCALL   goto state 55

State 62

	EXPRESSION -> '-' . EXPRESSION                      (rule 77)

	newlife        shift, and enter state 56
	ok             shift, and enter state 57
	notok          shift, and enter state 58
	'^'            shift, and enter state 59
	not            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	id             shift, and enter state 63
	n              shift, and enter state 64
	string         shift, and enter state 65

	EXPRESSION     goto state 88
	ARRAYPOSITION  goto state 53
	EXPRESSIONSTRUCTgoto state 54
	FUNCTIONCALL   goto state 55

State 63

	EXPRESSION -> id .                                  (rule 62)
	EXPRESSION -> id . '=' EXPRESSION                   (rule 90)
	ARRAYPOSITION -> id . '[' n ']'                     (rule 91)
	ARRAYPOSITION -> id . '[' id ']'                    (rule 92)
	EXPRESSIONSTRUCT -> id . '.' id                     (rule 93)
	FUNCTIONCALL -> id . '(' IDS ')'                    (rule 94)

	youbegin       reduce using rule 62
	whereiend      reduce using rule 62
	';'            reduce using rule 62
	'}'            reduce using rule 62
	'['            shift, and enter state 84
	']'            reduce using rule 62
	'.'            shift, and enter state 85
	mod            reduce using rule 62
	div            reduce using rule 62
	and            reduce using rule 62
	or             reduce using rule 62
	','            reduce using rule 62
	'('            shift, and enter state 86
	')'            reduce using rule 62
	'+'            reduce using rule 62
	'=='           reduce using rule 62
	'*'            reduce using rule 62
	'-'            reduce using rule 62
	'%'            reduce using rule 62
	'/'            reduce using rule 62
	'!='           reduce using rule 62
	'>='           reduce using rule 62
	'<='           reduce using rule 62
	'>'            reduce using rule 62
	'<'            reduce using rule 62
	'='            shift, and enter state 87
	newline        reduce using rule 62


State 64

	EXPRESSION -> n .                                   (rule 63)

	youbegin       reduce using rule 63
	whereiend      reduce using rule 63
	';'            reduce using rule 63
	'}'            reduce using rule 63
	']'            reduce using rule 63
	mod            reduce using rule 63
	div            reduce using rule 63
	and            reduce using rule 63
	or             reduce using rule 63
	','            reduce using rule 63
	')'            reduce using rule 63
	'+'            reduce using rule 63
	'=='           reduce using rule 63
	'*'            reduce using rule 63
	'-'            reduce using rule 63
	'%'            reduce using rule 63
	'/'            reduce using rule 63
	'!='           reduce using rule 63
	'>='           reduce using rule 63
	'<='           reduce using rule 63
	'>'            reduce using rule 63
	'<'            reduce using rule 63
	newline        reduce using rule 63


State 65

	EXPRESSION -> string .                              (rule 64)
